fixed horizontal overflow

--- a/src/components/PoemPage/PoemPage.css
+++ b/src/components/PoemPage/PoemPage.css
@@ -96,6 +96,6 @@
   position: absolute;
   z-index: -1;
   top: 0px;
-  width: 99%;
+  width: 98%;
   height: 100%;
 }
